including local process